--- a/circle.yml
+++ b/circle.yml
@@ -8,17 +8,15 @@ machine:
 
 dependencies:
   pre:
-    - go get golang.org/x/tools/cmd/vet
     - go get golang.org/x/tools/cmd/cover
-    - go get github.com/golang/lint/golint
     - go get github.com/tools/godep
+    - go get github.com/osamingo/gochic
   override:
     - godep restore
 
 test:
   pre:
-    - go vet ./
-    - golint ./ | xargs -r false
+    - gochic ./...
   override:
     - go test -v -coverprofile=coverage.txt -covermode=count ./
   post:
